<resources>
    <string name="app_name">Base</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="farg1">Frag 1</string>
    <string name="farg2">Frag 2</string>
    <string name="farg3">Frag 3</string>
    <string name="paginator">Paginator</string>
    <string name="list">List</string>
    <string name="net">net</string>
    <string name="pagerList">pagerList</string>
    <string name="netGetList">netGetList</string>
    <string name="postList">PostList</string>
    <string name="dbView">جستجو</string>
    <string name="staredList">ستاره دار ها</string>
    <string name="search">جستجو</string>
    <string name="barzin">برزین</string>
    <string name="samane">سامانه مزایدات و مناقصات</string>
    <string name="tab">tab</string>
    <string name="message">message</string>
    <string name="companySite">www.BarzinTejarat.ir</string>


    <string name="connected">con</string>
    <string name="wait4UpdateMessage">درحال بروزرسانی...</string>
    <string name="canNotconnectMessage">برای دریافت آخرین آگهی ها دستگاه شما باید متصل به اینترنت باشد</string>
    <string name="understood">متوجه شدم</string>
    <string name="Case">مورد</string>
    <string name="hasUpdated">بروزرسانی شد</string>
    <string name="group">گروه ها</string>

    <string name="ordered">سفارش شده</string>
    <string name="registered">ثبت شده</string>
    <string name="add">افزودن</string>
    <string name="usernameWarn">نام کاربری نمی تواند از چهار حرف کمتر یا از هشت حرف بیشتر باشد</string>
    <string name="passWarn">کلمه عبور باید بین چهار تا هشت حرف داشته باشد</string>
    <string name="phoneWarn">شماره تلفن وارد شده صحیح نمی باشد</string>
    <string name="userAccount">حساب کاربری</string>
    <string name="canNotRegister">حساب کاربری ثبت نشد</string>
    <string name="accountSuccessReg">کاربر با موفقیت ثبت شد</string>
    <string name="usernameReserved">نام کاربری قبلا ثبت شده است ، نام کاربری دیگری انتخاب کنید</string>
    <string name="edit">ویرایش</string>
    <string name="emailWarn">ایمیل وارد شده صحیح نمی باشد</string>
    <string name="save">ذخیره</string>
    <string name="status">وضعیت </string>
    <string name="active">فعال</string>
    <string name="inActive">غیر فعال</string>
    <string name="unRegistered">ثبت نشده</string>
    <string name="firstRunWelcome">خوش آمدید ، برای فعال سازی به منوی حساب کاربری بروید</string>
    <string name="invalidChars">از حروف انگلیسی یا فارسی و یا از اعداد استفاده کنید</string>
    <string name="connectingToNet">در حال اتصال به سامانه ...</string>
    <string name="accountSuccessRevived">حساب کاربری با موفقیت بازیابی شد</string>
    <string name="accountNotRegistered">حساب کاربری شما فعال نیست</string>
    <string name="viewAnnounce">مشاهده آگهی</string>
    <string name="contactWithUs"> ارتباط با ما</string>
    <string name="mainPage">صفحه اصلی</string>
    <string name="detail">جزئیات</string>

    <string-array name="titles">
        <item>Hello Food!</item>
        <item>Movie Tickets</item>
        <item>Great Discounts</item>
        <item>World Travel</item>
    </string-array>

    <string-array name="descriptions">
        <item>The easiest way to order food from your favourite restaurants!</item>
        <item>Book movie tickets for your family and friends</item>
        <item>Best discounts on every single service we offer</item>
        <item>Book tickets for any transportation and travel the world!</item>
    </string-array>


</resources>


