<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_netGetList"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/netGetList" />
        <item
            android:id="@+id/nav_Group"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/group" />
        <item
            android:id="@+id/nav_registration"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/userAccount" />
        <item
            android:id="@+id/nav_net"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/net" />
        <item
            android:id="@+id/nav_frag1"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/farg1" />
        <item
            android:id="@+id/nav_list"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/list" />
        <item
            android:id="@+id/nav_frag2"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/farg2" />
    </group>

    <item android:title="frag after 2">
        <menu>
            <item
                android:id="@+id/nav_paginator"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/paginator" />
            <item
                android:id="@+id/nav_frag3"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/farg3" />
            <item
                android:id="@+id/nav_pagerList"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/pagerList" />
            <item
                android:id="@+id/nav_postList"
                android:icon="@drawable/ic_menu_camera"
                android:title="@string/postList" />
            <item
                android:id="@+id/nav_staredList"
                android:icon="@drawable/ic_menu_camera"
                android:title="@string/staredList" />
            <item
                android:id="@+id/nav_dbView"
                android:icon="@drawable/ic_menu_camera"
                android:title="@string/dbView" />

        </menu>
    </item>

</menu>
