<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@drawable/side_nav_bar"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:scaleX="1.1"
        android:scaleY="1.1"
        app:srcCompat="@drawable/sun3" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/barzin"
        android:textSize="17sp"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/colorDarkRed"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="10sp"
        android:gravity="center"
        android:textStyle="italic"
        android:textColor="@color/colorDarkBrown"
        android:text="@string/samane" />
    <TextView
        android:id="@+id/site"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:keepScreenOn="true"
        android:text="@string/companySite"
        android:textColor="@color/colorGreen"
        android:textSize="8sp"
        android:textStyle="italic" />

</LinearLayout>
