<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/start_background"
    tools:context="com.tut.abiz.base.acts.SchedulActivity">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/fullscreen_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:keepScreenOn="true"
            android:text="@string/barzin"
            android:textColor="@color/colorDarkRed"
            android:layout_centerInParent="true"
            android:layout_centerHorizontal="true"
            android:textSize="35sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/start_imageRotate"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_above="@id/fullscreen_content"
            android:src="@drawable/sun3" />


        <TextView
            android:id="@+id/detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:keepScreenOn="true"
            android:text="@string/samane"
            android:textColor="@color/colorOrange"
            android:layout_below="@id/fullscreen_content"
            android:textSize="20sp"
            android:textStyle="italic" />
        <TextView
            android:id="@+id/site"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:keepScreenOn="true"
            android:text="@string/companySite"
            android:textColor="@color/colorGreen"
            android:layout_below="@id/detail"
            android:textSize="18sp"
            android:textStyle="italic" />

    </RelativeLayout>

    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->


</FrameLayout>
