<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <!--android:theme="@style/AppTheme.AppBarOverlay"-->

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary" />
        <!--app:popupTheme="@style/AppTheme.PopupOverlay"-->

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="6"
            android:background="@android:color/transparent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="66dp"
                android:background="@android:color/transparent" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="@dimen/text_size_xlarge">

                <TextView
                    android:id="@+id/user_active"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingRight="@dimen/text_size_small"
                    android:text="@string/inActive"
                    android:textDirection="rtl" />

                <TextView
                    android:id="@+id/user_registered"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingRight="@dimen/text_size_small"
                    android:text="@string/unRegistered"
                    android:textDirection="rtl" />

                <TextView
                    android:id="@+id/user_status"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/colorBlack"
                    android:paddingRight="@dimen/text_size_medium"
                    android:background="@color/colorVLightGray"
                    android:text="@string/status"
                    android:textDirection="rtl" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="@dimen/text_size_xlarge">

                <EditText
                    android:id="@+id/input_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="Name"
                    android:inputType="textPersonName"
                    android:maxLength="8"
                    android:paddingRight="@dimen/text_size_medium"
                    android:textDirection="rtl" />

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:scaleType="fitXY"
                    app:srcCompat="@drawable/icon_call" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="22dp"
                android:background="@android:color/background_dark" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/input_pass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="pass"
                    android:inputType="textVisiblePassword"
                    android:maxLength="8"
                    android:paddingRight="@dimen/text_size_medium"
                    android:textDirection="rtl" />

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:scaleType="fitXY"
                    app:srcCompat="@drawable/ic_menu_send" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="22dp"
                android:background="@android:color/background_dark" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/input_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="phone"
                    android:inputType="text|phone"
                    android:maxLength="11"
                    android:paddingRight="@dimen/text_size_medium"
                    android:textDirection="rtl" />

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:scaleType="fitXY"
                    app:srcCompat="@drawable/icon_call" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="22dp"
                android:background="@android:color/background_dark" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/input_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="Email"
                    android:inputType="textEmailAddress"
                    android:maxLength="18"
                    android:paddingRight="@dimen/text_size_medium"
                    android:textDirection="rtl" />

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:scaleType="fitXY"
                    app:srcCompat="@drawable/icon_sms" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="22dp"
                android:background="@android:color/background_dark" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/btn_submit"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="15dp"
                    android:text="Submit" />

            </RelativeLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="6"
            android:background="@android:color/transparent" />

    </LinearLayout>
</RelativeLayout>
